SERVER-57322 Invalidate filtering info on participants at the end of renameCollection